# MeuralMCP

./: .gitignore  AGENTS.md  README.md  llms.txt  pyproject.toml
docs/: sleep-schedules.md
examples/: config.example.json
examples/reverse-proxy/: Caddyfile  nginx.conf
examples/systemd/: meural-mcp-api-user.service  meural-mcp-api.service  meural-mcp-daemon.service  meural-mcp-user.service
scripts/: meural-mcp
src/meural_mcp/: api.py  api_client.py  cli.py  cloud.py  local.py  manager.py  mcp_server.py
tests/: test_api.py  test_cli.py  test_manager.py  test_mcp_server.py
