[project]
name = "meural-mcp"
version = "0.1.0"
description = "LAN preview manager and MCP server for Meural Canvas devices"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn>=0.30,<1.0",
  "requests>=2.32,<3.0",
  "mcp>=1.13,<2.0",
]

[project.scripts]
meural-mcp = "meural_mcp.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
